@@ -2,12 +2,10 @@ package org.upyog.cdwm.service;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.common.contract.request.User;
 import org.egov.tracer.model.CustomException;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.CollectionUtils;
 import org.upyog.cdwm.config.CNDConfiguration;
@@ -31,14 +29,15 @@ import digit.models.coremodels.RequestInfoWrapper;
 @Service
 public class WorkflowService {
 
-	@Autowired
-	private CNDConfiguration configs;
+	private final CNDConfiguration configs;
+	private final ServiceRequestRepository restRepo;
+	private final ObjectMapper mapper;
 
-	@Autowired
-	private ServiceRequestRepository restRepo;
-
-	@Autowired
-	private ObjectMapper mapper;
+	public WorkflowService(CNDConfiguration configs, ServiceRequestRepository restRepo, ObjectMapper mapper) {
+		this.configs = configs;
+		this.restRepo = restRepo;
+		this.mapper = mapper;
+	}
 	
 	/**
 	 * Updates the workflow status based on the provided PaymentRequest or CNDApplicationRequest.
@@ -54,11 +53,10 @@ public class WorkflowService {
 		RequestInfo requestInfo;
 
 		if (paymentRequest != null) {
-			processInstance = getProcessInstanceForCnD(paymentRequest, null, null);
+			processInstance = getProcessInstanceForCnD(paymentRequest, null);
 			requestInfo = paymentRequest.getRequestInfo();
 		} else if (cndApplicationRequest != null) {
-			processInstance = getProcessInstanceForCnD(null, cndApplicationRequest.getCndApplication(),
-					cndApplicationRequest.getRequestInfo());
+			processInstance = getProcessInstanceForCnD(null, cndApplicationRequest.getCndApplication());
 			requestInfo = cndApplicationRequest.getRequestInfo();
 		} else {
 			throw new IllegalArgumentException("Both PaymentRequest and cndApplicationRequest cannot be null");
@@ -74,11 +72,9 @@ public class WorkflowService {
 	 * 
 	 * @param paymentRequest The payment request object
 	 * @param application The CND application detail
-	 * @param requestInfo The request information
 	 * @return A ProcessInstance object
 	 */
-	private ProcessInstance getProcessInstanceForCnD(PaymentRequest paymentRequest, CNDApplicationDetail application,
-			RequestInfo requestInfo) {
+	private ProcessInstance getProcessInstanceForCnD(PaymentRequest paymentRequest, CNDApplicationDetail application) {
 		ProcessInstance processInstance = new ProcessInstance();
 
 		if (paymentRequest != null) {
@@ -106,7 +102,7 @@ public class WorkflowService {
 					User user = new User();
 					user.setUuid(uuid);
 					return user;
-				}).collect(Collectors.toList());
+				}).toList();
 
 				processInstance.setAssignes(users);
 			}
@@ -125,10 +121,9 @@ public class WorkflowService {
 	 */
 	public State callWorkFlow(ProcessInstanceRequest workflowReq) {
 
-		ProcessInstanceResponse response = null;
 		StringBuilder url = new StringBuilder(configs.getWfHost().concat(configs.getWfTransitionPath()));
 		Object optional = restRepo.fetchResult(url, workflowReq);
-		response = mapper.convertValue(optional, ProcessInstanceResponse.class);
+		ProcessInstanceResponse response = mapper.convertValue(optional, ProcessInstanceResponse.class);
 		return response.getProcessInstances().get(0).getState();
 	}
 
